--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,9 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+// Adding a title image in all headers
+.title-image {
+    margin-top: 8px;
+    height: 27px;
+}
