--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -12,8 +12,29 @@ $font-path: "../assets/fonts";
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
+// Typography
+// --------------------------------------------------
+// These typography variables is used throughout the app
+// to make the font styling easy to manage from the variables.
+
+// Base fonts
+$base-font-size: 18px;
+$base-line-height: 1.5;
+
+// Font weights
+$light: 300;
+$regular: 400;
+$medium: 500;
+$bold: 700;
 
 
+// General Helpers
+// --------------------------------------------------
+// These variables are used throughout the app to make it easier to
+// customize the look and feel of the app.
+
+$littlepadding: 2rem;
+$smallpadding: 10px 0 10px 0;
 
 // Named Color Variables
 // --------------------------------------------------
@@ -24,11 +45,16 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary:      #000,
+  light-grey:   #f8f8f8,
+  grey:         #e3e3e3,
+  white:        #fff,
+  yellow:       #ffd148,
+  blue:         #4155b4,
+  light-black:  #424242,
+  black:        #000,
+  red:          #8a0000,
+  purple:       #5b507a
 );
 
 
