--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,3 +20,8 @@
     margin-top: 8px;
     height: 27px;
 }
+
+// Global style to center all text like in Bootstrap
+.text-center {
+    text-align: center;
+}
