--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -17,6 +17,18 @@ page-home {
     background-size: cover;
     border-radius: 5px;
   }
+  .category__image2 {
+    background-image: url('../assets/img/backgrounds/img2.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 5px;
+  }
+  .category__image3 {
+    background-image: url('../assets/img/backgrounds/img3.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 5px;
+  }
   .section__headline {
     font-size: 1.5rem;
     font-weight: $bold;
