Category params and loader

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,6 +19,7 @@
 .title-image {
     margin-top: 9px;
     height: 25px;
+    text-align: center;
 }
 
 // Global style to center all text like in Bootstrap
