Fixed navbar and added gif to readme

--- a/src/pages/single-item/single-item.scss
+++ b/src/pages/single-item/single-item.scss
@@ -2,7 +2,7 @@ page-single-item {
   .scroll-content {
     background-color: $white;
   }
-  .header {
+  .background_image_header {
     background-image: url('../assets/img/backgrounds/img1.png');
     background-repeat: no-repeat;
     background-size: cover;
